--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -1,3 +1,4 @@
 <h1>Welcome to Treasure Cove!</h1>
 <h2>Your go to place for amazing finds!</h2>
+<%= image_tag("jaune.jpg", class:"img-responsive my-image") %>
 
